AppImage Startbefehl angepasst.